--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
     "codegen": "graph codegen",
     "build": "graph build",
     "deploy": "graph deploy --node https://api.thegraph.com/deploy/ platocrat/rubicon-bathdai-subgraph",
-    "create-local": "graph create --node http://localhost:8020/ platocrat/rubicon-bathdai-subgraph",
-    "remove-local": "graph remove --node http://localhost:8020/ platocrat/rubicon-bathdai-subgraph",
-    "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 platocrat/rubicon-bathdai-subgraph"
+    "create-local": "graph create --node http://localhost:8020/ rubicon-bathdai-subgraph",
+    "remove-local": "graph remove --node http://localhost:8020/ rubicon-bathdai-subgraph",
+    "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 rubicon-bathdai-subgraph"
   },
   "dependencies": {
-    "@graphprotocol/graph-cli": "0.21.1",
-    "@graphprotocol/graph-ts": "0.20.0"
+    "@graphprotocol/graph-cli": "^0.22.2",
+    "@graphprotocol/graph-ts": "^0.22.1"
   }
 }
