--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "rubicon-bathdai-subgraph",
+  "name": "rubicon-bathdai",
   "license": "UNLICENSED",
   "scripts": {
     "codegen": "graph codegen",
     "build": "graph build",
-    "deploy": "graph deploy --node https://api.thegraph.com/deploy/ platocrat/rubicon-bathdai-subgraph",
-    "create-local": "graph create --node http://localhost:8020/ rubicon-bathdai-subgraph",
-    "remove-local": "graph remove --node http://localhost:8020/ rubicon-bathdai-subgraph",
-    "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 rubicon-bathdai-subgraph"
+    "deploy": "graph deploy --node https://api.thegraph.com/deploy/ platocrat/rubicon-bathdai",
+    "create-local": "graph create --node http://localhost:8020/ rubicon-bathdai",
+    "remove-local": "graph remove --node http://localhost:8020/ rubicon-bathdai",
+    "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 rubicon-bathdai"
   },
   "dependencies": {
     "@graphprotocol/graph-cli": "^0.22.2",
